--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,3 +1,4 @@
+-r requirements.txt
 pip==19.2.3
 bump2version==0.5.11
 wheel==0.33.6
@@ -9,4 +10,4 @@ Sphinx==1.8.5
 twine==1.14.0
 kalasiris
 sphinx_rtd_theme
-
+gdal
